# isitbinday

./: .baseline.json  .cogfiles  .dockerignore  .git-blame-ignore  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Makefile  Procfile  README.md  app.json  conftest.py  dockerfile  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: deploy.yaml
accounts/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_homegroup.py  0003_remove_homegroup_admin.py
accounts/tests/: test_google_jwt_login.py
accounts/urls/: api.py  urls.py
assets/css/: beer.css  main.css
assets/typescript/: main.ts
books/: admin.py  api.py  exceptions.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20210403_2100.py  0003_auto_20210404_1540.py  0004_auto_20210404_1837.py  0005_auto_20210404_1900.py  0006_auto_20210405_2012.py  0007_alter_book_authors.py  0007_auto_20210803_0751.py  0008_alter_book_authors.py  0008_merge_0007_alter_book_authors_0007_auto_20210803_0751.py  0009_auto_20210803_1955.py  0009_auto_20211113_1159.py  0010_auto_20211113_1300.py  0011_auto_20211113_1416.py  0012_auto_20211113_1430.py  0013_auto_20211113_1544.py  0014_alter_book_tmp_cover.py  0015_syncsetting_syncmetadata.py  0016_alter_syncmetadata__rev_alter_syncmetadata_book.py  0017_alter_book_publish_date.py  0018_encypt_passwords.py  0019_alter_author_owner_alter_book_owner_and_more.py
books/policy/: authorization.polar
books/services/: __init__.py  sync.py
books/tests/: conftest.py  test_models.py  test_sync.py
books/urls/: api.py
food/: admin.py  api.py  apps.py  exceptions.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
food/migrations/: 0001_initial.py  0002_auto_20201120_0857.py  0003_auto_20201120_0905.py  0004_auto_20201121_0820.py  0005_auto_20201121_1622.py  0006_location_can_move_to.py  0007_stock_expires.py  0008_auto_20201121_1743.py  0009_auto_20201122_0917.py  0010_auto_20201122_1104.py  0011_auto_20201122_1148.py  0012_auto_20201122_1741.py  0013_auto_20201122_1947.py  0014_auto_20201126_0858.py  0015_stock_owner.py  0016_transfer_owner.py  0017_auto_20210110_0911.py  0018_auto_20210112_0849.py  0019_product_is_pack.py  0020_alter_stock_owner_alter_transfer_owner.py
food/policy/: authorization.polar
food/tests/: base.py  conftest.py  test_location.py  test_product.py  test_productAPI.py  test_product_api.py  test_stock.py
food/urls/: api.py
hiit/: admin.py  apps.py  models.py  tests.py
hiit/migrations/: 0001_initial.py  0002_exercise_difficulty.py  0003_alter_exercise_difficulty.py  0004_workout_interval_workout_round_count_and_more.py  0005_alter_workout_round_length.py  0006_alter_workout_exercises.py
households/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  views.py
households/migrations/: 0001_initial.py
infrastructure/: .gitignore  Makefile  aws.tf  cloudflare.tf  github.tf  isitbinday.tf  main.tf
isitbinday/: admin_utils.py  asgi.py  middleware.py  settings.py  urls.py  viewsets.py  wsgi.py
isitbinday/settings/: base.py  dev.py  production.py  test.py
recipes/: admin.py  api.py  extrators.py  file_cache.py  forms.py  models.py  serializers.py  test_yoast_extractor.py  tests.py  urls.py  views.py
recipes/extrators/: __init__.py  schema_org_extractor.py  utils.py  yoast_extractor.py
recipes/migrations/: 0001_initial.py  0002_auto_20210829_2042.py  0003_auto_20210830_1050.py  0003_auto_20210830_1335.py  0004_recipe_slug.py  0005_auto_20210831_1957.py  0006_alter_ingredient_name.py  0007_alter_unit_name.py  0008_alter_ingredient_name_alter_unit_name_and_more.py  0009_alter_ingredient_name_alter_recipe_name_and_more.py  0010_alter_recipe_created_alter_recipe_last_updated.py
recipes/policy/: authorization.polar
recipes/tests/: base.py  conftest.py  test_extractors.py  test_models.py  test_views.py
recipes/urls/: api.py
save_context_manager/: context_manager.py  test.py
static/css/: beer.min.css  main.min.css
static/js/: main.min.js  main.min.js.map
tags/: admin.py  apps.py  models.py  tests.py
tags/migrations/: 0001_initial.py
tasks/: admin.py  api.py  apps.py  fields.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20200820_0721.py  0003_auto_20200820_0723.py  0004_sprint.py  0005_sprint_tasks.py  0006_auto_20200820_0751.py  0007_auto_20200820_0753.py  0008_sprint_finished.py  0009_task_blocked_by.py  0010_auto_20200821_0723.py  0011_auto_20200824_0753.py  0012_auto_20200826_0753.py  0013_auto_20200914_0734.py  0014_auto_20201019_0732.py  0015_task_show_after.py  0016_auto_20201021_0745.py  0017_auto_20201116_2039.py  0018_task_archived_alter_task_state.py  0018_task_tags.py  (+1 more)
templates/: base.html  base_html.html  base_htmx.html  nav.html
user/: serializers.py  urls.py  views.py
userauth/: admin.py  apps.py  backends.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
utils/: __init__.py  admin.py  model_managers.py  models.py  permissions.py
(+85 files in other folders)
