[project]
name = "is-it-bin-day"
version = "0.1.3"
description = "More useful task list"
authors = [
  {email = "bengosney@googlemail.com", name = "Ben Gosney"}
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[tool.black]
line-length = 128
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP", "C90", "DJ", "N" ] # Add DJ and N back in when I have time to fix them

[tool.pycln]
all = true
